# clickhouse-migrations

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  action.yml  pyproject.toml  requirements-test.txt  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  social-preview.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  docker-publish.yml  publish-to-pypi.yaml  star-history.yml
dev/: Makefile  docker-compose.yaml  users.xml
dev/CH-TEMPLATE/: config.xml
dev/CH-TEMPLATE/config.d/: database_atomic_delay_before_drop_table.xml
dev/CH-TEMPLATE/users.d/: default-user.xml
scripts/: gen_star_history.py
src/clickhouse_migrations/: __init__.py  clickhouse_cluster.py  cmd.py  command_line.py  connection.py  defaults.py  exceptions.py  migration.py  migrator.py  types.py  util.py
src/tests/: conftest.py  test_clickhouse_cluster.py  test_clickhouse_migration.py  test_cluster_support.py  test_command_line.py  test_connection.py  test_dryrun.py  test_init_clickhouse_cluster.py  test_log_level.py  test_migration_storage.py  test_migrator.py
src/tests/complex_migrations/: 001_init.sql  002_test2.sql  003_third_test.sql  010_migrations_is_not_in_row.sql
src/tests/complex_migrations_changed/: 001_init.sql  002_test2.sql  003_third_test.sql  010_migrations_is_not_in_row.sql
src/tests/down_migrations/: 001_create.down.sql  001_create.sql  002_create.down.sql  002_create.sql
src/tests/integration/: test_clickhouse_migration.py  test_cluster_support.py  test_connect_driver.py  test_dryrun.py  test_init_clickhouse_cluster.py  test_rollback.py  test_status.py
src/tests/issue_15/: 001_init.sql
src/tests/multi_statements_migrations/: 001_create_test.sql
