[metadata]
name = clickhouse-migrations
version = attr: clickhouse_migrations.__version__
author = Aleh Strakachuk
author_email = zifter.ai+clickhouse-migrations@gmail.com
home_page = https://github.com/zifter/clickhouse-migrations
description = attr: clickhouse_migrations.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = clickhouse, migrations
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir =
    clickhouse_migrations=src/clickhouse_migrations
    tests=src/tests
packages =
    clickhouse_migrations
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
    clickhouse-driver>=0.2.2

[options.entry_points]
console_scripts =
    clickhouse-migrations = clickhouse_migrations.cmd:main

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
